updates on monitoring

--- a/master_agent/ui/templates/index.html
+++ b/master_agent/ui/templates/index.html
@@ -39,7 +39,7 @@
 						<ul class="nav navbar-nav">
 							<li id="homebutton" class="active"><a href="/">Home</a></li>
 							<li id="nodesbutton"><a href="nodes">Nodes</a></li>
-							<li id="containersbutton"><a href="containers">Containers</a></li>
+							<li id="containersbutton"><a href="monitoring">Monitoring</a></li>
 						</ul>
 					</div><!--/.nav-collapse -->
 				</div><!--/.container-fluid -->
